# pretty-ghci

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  pretty-ghci.cabal
driver/: Main.hs
haddock-test/: Main.hs
haddock-test/ref/: sample2.txt
haddock-test/src/: sample1.txt  sample2.txt  sample3.txt
show-test/: Main.hs
show-test/ref/: error_recovery.txt  lists_tuples.txt  literals.txt  records.txt  sample1.txt  sample2.txt  sample3.txt
show-test/src/: error_recovery.txt  lists_tuples.txt  literals.txt  records.txt  sample1.txt  sample2.txt  sample3.txt
src-unix/System/Terminal/: Utils.hsc
src-windows/System/Terminal/: Utils.hs
src/System/Terminal/: Utils.hsc
src/Text/GHCi/: Haddock.hs  Value.hs
src/Text/GHCi/Value/: Lexer.x  Parser.y
src/Text/PrettyPrint/: GHCi.hs
src/Text/PrettyPrint/GHCi/: Haddock.hs  Value.hs
src/Text/PrettyPrint/GHCi/Value/: Lexer.x  Parser.y
test/: Main.hs
test/ref/: sample1.txt  sample3.txt
