cabal-version:       2.0

name:                pretty-ghci
version:             0.1.0.0
synopsis:            Functions for beautifying GHCi
license:             BSD3
license-file:        LICENSE
author:              Alec Theriault
maintainer:          alec.theriault@gmail.com
copyright:           (c) Alec Theriault
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Text.PrettyPrint.GHCi
                       Text.PrettyPrint.GHCi.Haddock
                       Text.PrettyPrint.GHCi.Value
                       Text.PrettyPrint.GHCi.Value.Lexer
                       Text.PrettyPrint.GHCi.Value.Parser

  build-tools:         alex >=3.1
                     , happy >=1.19

  build-depends:       base ^>=4.12.0.0
                     , haddock-library ^>=1.7
                     , prettyprinter-ansi-terminal ^>=1.1
                     , prettyprinter ^>=1.2
                     , text ^>=1.2
                     , array >=0.5 && <0.6

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite haddock-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs

  build-depends:       pretty-ghci
                     , base
                     , prettyprinter
                     , filepath
                     , directory
                     , process

  hs-source-dirs:      haddock-test
  default-language:    Haskell2010

test-suite show-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs

  build-depends:       pretty-ghci
                     , base
                     , prettyprinter
                     , filepath
                     , directory
                     , process

  hs-source-dirs:      show-test
  default-language:    Haskell2010

